Simplify Docker CMD

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,5 +5,5 @@ RUN apk add --no-cache python3 && \
 
 ENV FREQUENCY=15
 
-ADD run.sh /run.sh
-CMD /run.sh
+CMD echo "*/$FREQUENCY * * * * linode-dynamic-dns" | crontab - && \
+    crond -f
