--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,6 +2,4 @@ FROM python:alpine
 
 RUN pip3 install --no-cache-dir linode-dynamic-dns
 
-ENV FREQUENCY=15
-
-CMD linode-dynamic-dns -s "$(expr "$FREQUENCY" '*' 60)"
+ENTRYPOINT /usr/local/bin/linode-dynamic-dns
